# WebGPU-Learning

./: Application.cpp  Application.h  CMakeLists.txt  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SceneObject.cpp  SceneObject.h  Texture.cpp  Texture.h  main.cpp  main.h  utils.cpp  utils.h
resources/: pyramid.txt  shader.wgsl
